# skala-front

./: .mcp.json  index.html
CSS/: style.css
html/: index.html  myClass.html  myHoliday.html  myProfile.html  myTrip.html  signUp.html  signUpResult.html
javascript/: bag.js  dinoGame.js  gameModal.js  grade.js  minesweeper.js  pacmanGame.js  realtimeInfo.js  routeAPI.js  scrollReveal.js  trafficInfo.js  tripAlbum.js  upDown.js  weatherAPI.js
my-project/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
my-project/my_project.egg-info/: PKG-INFO  SOURCES.txt
my-project/pipeline/: __init__.py  fetch.py  models.py  storage.py
my-project/tests/: test_models.py
